--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -117,3 +117,36 @@
 "seed_back_title" = "Back to seed phrase";
 "seed_back_text" = "You current seed will become obsolete and the new seed will be generated";
 "generate" = "Generate";
+"address" = "Address";
+"address_id" = "Address ID:";
+"exp_date" = "Expiration date:";
+"annotation" = "Annotation:";
+"show_qr_code" = "Show QR code";
+"copy_address" = "Copy address";
+"edit_address" = "Edit address";
+"delete_address" = "Delete address";
+"delete_address_transaction" = "Delete address and related transactions";
+"delete_address_only" = "Delete address only";
+"category" = "Category";
+"in_24_hours" = "In 24 hours";
+"never" = "Never";
+"address_expires" = "Address expires";
+"save" = "Save";
+"active_address" = "Active address";
+"expire_now" = "Expire address now";
+"open_settings" = "Open Settings";
+"camera_denied_text" = "It looks like your privacy settings are preventing us from accessing your camera to do qr code scanning. You can fix this by doing the following:\n\n1. Touch the Go button below to open the Settings app.\n\n2. Turn the Camera on.\n\n3. Open this app and try again.";
+"camera_restricted" = "You've been restricted from using the camera on this device. Without camera access this feature won't work. Please contact the device owner so they can give you access";
+"error_scan_qr_code" = "QR code cannot be recognized recognized. Please try again.";
+"scan_qr_code" = "Scan QR code";
+"scan_tg_qr_code" = "Scan telegram QR code";
+"receive" = "Receive";
+"hours_24" = "24 hours";
+"delete_all_addresses" = "Delete all addresses";
+"delete_all_contacts" = "Delete all contacts";
+"delete_all_transactions" = "Delete all transactions";
+"clear" = "Clear";
+"clear_data" = "Clear data";
+"contacts" = "contacts";
+"and" = " and ";
+
