--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -239,3 +239,4 @@
 "copy_contact" = "Copy contact";
 "delete_contact_transaction" = "Delete contact and related transactions";
 "delete_contact_only" = "Delete contact only";
+"enter_password_title_3" = "Enter your password";
