--- a/Resources/ru.lproj/Localizable.strings
+++ b/Resources/ru.lproj/Localizable.strings
@@ -1,1 +1,289 @@
-
+"restore_wallet_title" = "Restore Wallet";
+"restore_wallet_info" = "Only your funds can be fully restored from the blockchain. The transaction history is stored locally and is encrypted with your password, hence it can't be restored.\n\nThat's the final version until the future validation and process.";
+"no_space_title" = "Not enough storage";
+"no_space_info" = "To restore the wallet on the phone should be at least 200 MB of free space";
+"beam_title" = "Scalable confidential cryptocurrency";
+"create_new_wallet_1" = "create new wallet";
+"create_new_wallet_2" = "Create new wallet";
+"restore_wallet" = "restore wallet";
+"enter_password_title_1" = "Enter your password to access the wallet";
+"use" = "Use";
+"enter_password_title_2" = "or enter your password\nto access the wallet";
+"empty_password" = "Password can not be empty";
+"incorrect_password" = "Incorrect password";
+"incompatible_node_title" = "Incompatible node";
+"incompatible_node_info" = "You’re trying to connect to an incompatible node.";
+"change_settings" = "Change settings";
+"cancel" = "Cancel";
+"cancel_lower" = "cancel";
+"open_another_wallet" = "login to another wallet";
+"seed_capture_warning" = "You’ve just captured your seed phrase. Keeping the image on your phone puts your funds at risk. It is strongly recommended to remove the screenshot manually from your pictures gallery.";
+"seed_prhase" = "Seed phrase";
+"inpur_seed" = "Type in your seed phrase";
+"confirm_seed" = "To ensure the seed phrase is written down correctly, please fill in the specific words below";
+"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"intro_seed_main" = "Create new wallet by generating seed phrase.\nIf you ever lose your device,\nyou will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers. Never save it in your local or remote folders in any form.";
+"intro_seed_1" = "Do not let anyone see your seed phrase";
+"intro_seed_2" = "Never type your seed phrase into password managers or elsewhere";
+"intro_seed_3" = "Make at least 2 copies of the phrase in case of emergency";
+"save_seed_title" = "Save seed phrase";
+"save_seed_info" = "Please write the seed phrase down. Do not screenshot it and save it in your photo gallery. It makes the phrase prone to cyber attacks and, therefore, less secure.";
+"next" = "next";
+"generate_seed" = "generate seed phrase";
+"create_new_wallet" = "Create new wallet";
+"copied_to_clipboard" = "Copied to clipboard";
+"done" = "Done";
+"confirm_seed" = "Confirm seed phrase";
+"open_your_wallet" = "open your wallet";
+"password" = "Password";
+"return_to_seed_title" = "Return to seed phrase";
+"return_to_seed_info" = "If you return to seed phrase, it would be changed and your local password won’t be saved.";
+"return" = "Return";
+"old_password" = "New password cannot be the same as old";
+"enable" = "Enable";
+"dont_use" = "Don't use";
+"change_password" = "Change password";
+"passwords_dont_match" = "Passwords do not match";
+"create_new_password" = "Create new password to access your wallet";
+"enter_password" = "Enter password";
+"confirm_password" = "Confirm password";
+"password_requariments" = "Strong password needs to meet the following requirements:\n•  the length must be at least 10 characters\n•  must contain at least one lowercase letter\n•  must contain at least one uppercase letter\n•  must contain at least one number";
+"creating_wallet" = "Creating wallet";
+"error" = "Error";
+"restoring_wallet" = "Restoring wallet";
+"restored" = "Restored ";
+"loading_wallet" = "Loading wallet";
+"no_internet" = "No internet connection";
+"wallet_not_created" = "Wallet not created";
+"wallet_not_opened" = "Wallet can not be opened";
+"restor_wallet_warning" = "Please wait for synchronization and do not close or minimize the application.";
+"restor_wallet_info" = "Only the wallet balance (UTXO) can be restored,  transaction info is always private\nand never kept in the blockchain.";
+"receive" = "receive";
+"send" = "send";
+"available" = "Available";
+"in_progress" = "In progress";
+"receiving_u" = "RECEIVING";
+"sending_u" = "SENDING";
+"maturing_u" = "MATURING";
+"sending_address" = "Sending address:";
+"receiving_address" = "Receiving address:";
+"transaction_fee" = "Transaction fee:";
+"transaction_id" = "Transaction ID: ";
+"kernel_id" = "Kernel ID:";
+"comment" = "Comment:";
+"failure_reason" = "Failure reason:";
+"cancel_transaction" = "Cancel transaction";
+"delete_transaction" = "Delete transaction";
+"repeat_transaction" = "Repeat transaction";
+"general_info" = "General transaction info";
+"payment_proof" = "Payment proof";
+"utxo_list" = "Transaction UTXO list:";
+"transaction_details" = "Transaction details";
+"payment_proof_verefication" = "Payment proof verification";
+"code" = "Code:";
+"sender" = "Sender:";
+"receiver" = "Receiver:";
+"amount" = "Amount:";
+"beam" = " BEAM";
+"spent" = "spent";
+"total" = "total";
+"face_id" = "Face ID ";
+"touch_id" = "Touch ID ";
+"wallet" = "Wallet";
+"empty_transactions_list" = "your transactions history will appear here";
+"transactions" = "Transactions";
+"export" = "Export";
+"activate" = "Activate";
+"activate_security_title" = "Activate security mode";
+"activate_security_text" = "All the balances will be hidden until the eye icon is tapped again";
+"enable_face_id_title" = "Enable Face ID";
+"enable_touch_id_title" = "Enable Touch ID";
+"enable_face_id_text" = "Would you like to use Face ID for login to your wallet?\n\nAfter login \(mechanism) can be enabled or disabled at any time in the settings menu";
+"enable_touch_id_text" = "Would you like to use Touch ID for login to your wallet?\n\nAfter login \(mechanism) can be enabled or disabled at any time in the settings menu";
+"external_link_title" = "External link";
+"external_link_text" = "Beam Wallet app requires permission to open external link in the browser. This action will expose your IP to the web server. To avoid it, choose \"Cancel\". You can chage your choice in app setting anytime.";
+"open" = "Open";
+"addresses" = "Addresses";
+"utxo" = "UTXO";
+"settings" = "Settings";
+"details" = "Details";
+"utxo_details" = "UTXO Details";
+"utxo_type" = "UTXO type";
+"all" = "All";
+"active" = "Active";
+"secutiry_utxo" = "You’re currently in Security Mode.\nTurn it off to see your UTXO list";
+"seed_back_title" = "Back to seed phrase";
+"seed_back_text" = "You current seed will become obsolete and the new seed will be generated";
+"generate" = "Generate";
+"address" = "Address";
+"address_id" = "Address:";
+"exp_date" = "Expiration date:";
+"annotation" = "Annotation:";
+"show_qr_code" = "Show QR code";
+"copy_address" = "Copy address";
+"edit_address" = "Edit address";
+"delete_address" = "Delete address";
+"delete_address_transaction" = "Delete address and related transactions";
+"delete_address_only" = "Delete address only";
+"category" = "Category";
+"in_24_hours" = "In 24 hours";
+"never" = "Never";
+"address_expires" = "Address expires";
+"save" = "Save";
+"active_address" = "Active address";
+"expire_now" = "Expire address now";
+"open_settings" = "Open Settings";
+"camera_denied_text" = "It looks like your privacy settings are preventing us from accessing your camera to do qr code scanning. You can fix this by doing the following:\n\n1. Touch the Go button below to open the Settings app.\n\n2. Turn the Camera on.\n\n3. Open this app and try again.";
+"camera_restricted" = "You've been restricted from using the camera on this device. Without camera access this feature won't work. Please contact the device owner so they can give you access";
+"error_scan_qr_code" = "QR code cannot be recognized recognized. Please try again.";
+"scan_qr_code" = "Scan QR code";
+"scan_tg_qr_code" = "Scan telegram QR code";
+"receive" = "Receive";
+"hours_24" = "24 hours";
+"delete_all_addresses" = "Delete all addresses";
+"delete_all_contacts" = "Delete all contacts";
+"delete_all_transactions" = "Delete all transactions";
+"clear" = "Clear";
+"clear_data" = "Clear data";
+"contacts" = "contacts";
+"and" = " and ";
+"stay_active_title" = "Stay active";
+"stay_active_text" = "Do not close the wallet otherwise transation will not be completed";
+"rate_title" = "\n\n\nYour voice matters!";
+"rate_text" = "Please rate your experience with Beam Wallet";
+"rate_app" = "Rate App";
+"feedback" = "Feedback";
+"not_now" = "Not Now";
+"amount_empty" = "Amount field can't be empty";
+"amount_zero" = "Amount must be greater than zero";
+"next" = "next";
+"where_buy_beam" = "Where to buy BEAM?";
+"logout" = "Log out";
+"logout_text" = "You are sure that you want to log out?";
+"updating" = "updating";
+"connecting" = "connecting";
+"online" = "online";
+"online_testnet" = "online (testnet)";
+"offline" = "offline";
+"offline_testnet" = "offline (testnet)";
+"tg_bot" = "Telegram bot";
+"tg_bot_link" = "Please open wallet to link telegram bot";
+"share_qr_code" = "Share QR code";
+"qr_code" = "QR code";
+"create_address" = "create address";
+"new_address" = "New address";
+"new_category" = "New category";
+"edit_category" = "Edit category";
+"category_name" = "Category name";
+"category_exist" = "This category name already exists";
+"edit" = "Edit";
+"delete" = "Delete";
+"no_category_addresses" = "there are no addresses associated with this category";
+"delete_category" = "Delete category";
+"beams_send" = "Beams sent";
+"undo" = "Undo";
+"repeat" = "Repeat";
+"cancelled" = "cancelled";
+"delete_transaction_title" = "Delete transaction";
+"delete_transaction_text" = "Are you sure you want to delete this transaction from your wallet?";
+"current_password_error" = "Current password is incorrect";
+"categories_empty_title" = "Categories list is empty";
+"categories_empty_text" = "You don’t have any categories\nat the moment. You can create category in Settings.";
+"cancel_transaction_text" = "Are you sure you want to cancel\nthis transaction?";
+"yes" = "Yes";
+"no" = "No";
+"address_deleted" = "Address deleted";
+"contact_deleted" = "Contact deleted";
+"show_owner_key" = "Show owner key";
+"ownerkey_touchid_text" = "Enter your password and use Touch ID\nto access the wallet";
+"ownerkey_faceid_text" = "Enter your password and use Face ID\nto access the wallet";
+"ownerkey_faceid_subtext" = "To see the owner key you must pass this 2-step verification (submit a password and use Face ID)";
+"ownerkey_touchid_subtext" = "To see the owner key you must pass this 2-step verification (submit a password and use Touch ID)";
+"ownerkey_text" = "Enter your password to access the wallet";
+"ownerkey_subtext" = "To see the owner key you must pass this verification";
+"ownerkey_copied" = "Owner key code copied to clipboard";
+"advanced" = "Advanced";
+"expires" = "Expires";
+"none" = "None";
+"change_address" = "Change address";
+"auto_address" = "ADDRESS (autogenerated)";
+"local_annotation_not_shared" = "LOCAL ANNOTATION (won't be shared)";
+"existing_addresses" = "Existing addresses";
+"address_search" = "Search by address, category, name";
+"not_found" = "Nothing found";
+"touch_id_ownerkey_verefication" = "Use fingerprint to finish verification and get access to owner key";
+"send" = "Send";
+"paste_enter_address" = "PASTE ADDRESS OR CHOOSE CONTACT";
+"incorrect_address" = "Incorrect address";
+"request_amount" = "REQUEST AMOUNT (optional)";
+"enter_amount" = "AMOUNT";
+"address_is_expired" = "Can't send to the expired address";
+"groth" = " GROTH";
+"ownerkey_faceid_confirm" = "Please use Face ID to finish verification";
+"ownerkey_touchid_confirm" = "Please use Touch ID to finish verification";
+"name" = "Name";
+"confirm" = "CONFIRMATION";
+"send_to" = "SEND TO";
+"amount_to_send" = "AMOUNT TO SEND";
+"transaction_fees" = "TRANSACTION FEE";
+"total_utxo" = "TOTAL UTXO VALUE";
+"send_notice" = "For the transaction to complete, the recipient must get online within the next 12 hours and you should get online within 2 hours afterwards";
+"save_address_title" = "Save address";
+"save_contact_text" = "Would you like to save recipient address for futher transactions?";
+"save_address_text" = "Would you like to save created address and use it later?";
+"not_save" = "Don’t save";
+"address_copied" = "Address copied to clipboard";
+"copy" = "Copy";
+"name2" = "Name:";
+"contact" = "Contact";
+"edit_contact" = "Edit contact";
+"delete_contact" = "Delete contact";
+"copy_contact" = "Copy contact";
+"delete_contact_transaction" = "Delete contact and related transactions";
+"delete_contact_only" = "Delete contact only";
+"enter_password_title_3" = "Enter your password";
+"outgoing" = "OUTGOING ADDRESS (autogenerated)";
+"outgoing_address" = "OUTGOING ADDRESS";
+"your_password" = "Your password";
+"node" = "Node";
+"categories" = "Categories";
+"ip_port" = "ip:port:";
+"ask_password" = "Ask for password on every Send";
+"allow_open_link" = "Allow open external link";
+"change_wallet_password" = "Change wallet password";
+"create_new_category" = "Create new category";
+"report_problem" = "Report a problem";
+"open_tg_bot" = "Open telegram bot";
+"link_tg_bot" = "Linking telegram bot";
+"unlock_password" = "Enter your current password to proceed changes in settings";
+"send_confirm_utxo" = "The current transaction will send UTXO, which are still being received and were not fully confirmed yet";
+"tg_bot_linked" = "Telegram bot successfully linked";
+"tg_bot_not_linked" = "Error\nTelegram bot is not linked\nPlease try again";
+"tg_bot_not_linked_notification" = "To link the bot, you need to enable notifications. Turn notifications on and try again";
+"tg_bot_connection" = "Сonnection with the telegram bot";
+"transaction_search" = "Transaction search";
+"search" = "Search";
+"autogenerated" = "auto-generated";
+"click_receive_beam" = "Click to receive Beam";
+"save_edit_address_text" = "Would you like to save changes in this address?";
+"save_changes" = "Save changes";
+"my_rec_address" = "My receiveing address:";
+"my_send_address" = "My sending address:";
+"my_address" = "My address:";
+"contact2" = "Contact:";
+"no_name" = "No name";
+"buy_beam" = "Buy BEAM";
+"you_send" = "You send";
+"you_get" = "You get";
+"recipient_address" = "recipient address";
+"refund_address" = "refund address";
+"beam2" = "BEAM";
+"min_amount" = "Minimum amount is";
+"beam_to_receive" = "Beam to receive";
+"beam_recepient_auto" = "Beam recipient address (autogenerated)";
+"beam_recepient" = "Beam recipient address";
+"start_transaction" = "Start transaction";
+"star_transaction_notice" = "By clicking \"Start transaction\" you accept\nCryptoWolf Terms of Use & Conditions";
+"terms_of_use" = "Terms of Use & Conditions";
+"incorrect_amount" = "Amount must be greater than minimum amount";
+"min_amount_loading" = "Minimum amount is loading...";
