--- a/Resources/es.lproj/Localizable.strings
+++ b/Resources/es.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 "seed_capture_warning" = "Acabas de hacer una captura de tu frase semilla. Mantener la imagen en tu teléfono pone en riesgo tus fondos. Se recomienda encarecidamente eliminar la captura de pantalla manualmente de la galería de imágenes.";
 "seed_prhase" = "Frase semilla";
 "inpur_seed" = "Escribe en tu frase semilla";
-"confirm_seed" = "Para asegurarse de que la frase semilla esté escrita correctamente, complete las palabras específicas a continuación";
+"confirm_seed_text" = "Para asegurarse de que la frase semilla esté escrita correctamente, complete las palabras específicas a continuación";
 "display_seed" = "Su frase semilla es la clave de acceso a todas las criptomonedas en su wallet. Imprime o escribe la frase para guardarla en un lugar seguro o caja de seguridad. Sin la frase no podrás recuperar tu dinero.";
 "intro_seed_main" = "Crea un nuevo wallet generando una frase semilla. Si alguna vez pierdes tu dispositivo, necesitará esta frase para recuperar su wallet! Nunca escriba su frase semilla en keychains o administradores de contraseñas. Nunca lo guarde en sus carpetas locales o remotas de ninguna forma.";
 "intro_seed_1" = "No dejes que nadie vea tu frase semilla";
@@ -118,7 +118,7 @@
 "delete_address" = "Borrar dirección";
 "delete_address_transaction" = "Eliminar dirección y transacciones relacionadas";
 "delete_address_only" = "Borrar sólo la dirección";
-"category" = "Tag";
+"category" = "Etiqueta";
 "in_24_hours" = "En 24 horas";
 "never" = "Nunca";
 "address_expires" = "La dirección ha caducado";
@@ -144,7 +144,7 @@
 "stay_active_text" = "No cierre el wallet, de lo contrario no se completará la transacción";
 "rate_title" = "\n\n\nTu voz es importante!";
 "rate_text" = "Por favor califica tu experiencia con Beam Wallet";
-"rate_app" = "Rate the app";
+"rate_app" = "Califica la aplicación";
 "feedback" = "Sugerencias";
 "not_now" = "Ahora no";
 "amount_empty" = "El campo de cantidad no puede estar vacío";
@@ -161,14 +161,14 @@
 "qr_code" = "Código QR";
 "create_address" = "crear dirección";
 "new_address" = "Nueva dirección";
-"new_category" = "Create tag";
-"edit_category" = "Edit tag";
-"category_name" = "Tag name";
-"category_exist" = "This tag already exists";
+"new_category" = "Crea una etiqueta";
+"edit_category" = "Editar etiqueta";
+"category_name" = "Nombre de la etiqueta";
+"category_exist" = "Esta etiqueta ya existe";
 "edit" = "Editar";
 "delete" = "Borrar";
-"no_category_addresses" = "there are no addresses associated with this tag";
-"delete_category" = "Delete tag";
+"no_category_addresses" = "no hay direcciones asociadas a esta etiqueta";
+"delete_category" = "Borrar etiqueta";
 "beams_send" = "Enviar Beams";
 "undo" = "Deshacer";
 "repeat" = "Repite";
@@ -176,8 +176,8 @@
 "delete_transaction_title" = "Borrar transacción";
 "delete_transaction_text" = "¿Está seguro de que desea eliminar esta transacción de su wallet?";
 "current_password_error" = "La contraseña actual es incorrecta";
-"categories_empty_title" = "Tags list is empty";
-"categories_empty_text" = "You don’t have any tags\nat the moment. You can create tag in Settings.";
+"categories_empty_title" = "La lista de etiquetas esta vacía";
+"categories_empty_text" = "No tienes etiquetas en este momento. Puede crear etiquetas en Ajustes.";
 "cancel_transaction_text" = "Estas seguro que quieres cancelar esta transacción?";
 "yes" = "Si";
 "no" = "No";
@@ -197,7 +197,7 @@
 "change_address" = "Cambiar dirección";
 "auto_address" = "Direcciones (autogeneradas)";
 "existing_addresses" = "Direcciones existentes";
-"address_search" = "Search by address, tag or name";
+"address_search" = "Buscar por dirección, etiqueta o nombre";
 "not_found" = "No se ha encontrado nada";
 "touch_id_ownerkey_verefication" = "Use la huella digital para finalizar la verificación y obtener acceso a la clave del propietario";
 "send" = "Enviar";
@@ -229,12 +229,12 @@
 "outgoing_address" = "Dirección saliente";
 "your_password" = "Tu contraseña";
 "node" = "Nodo";
-"categories" = "Tags";
+"categories" = "Etiquetas";
 "ip_port" = "ip: puerto";
 "ask_password" = "Pedir contraseña en cada envío";
 "allow_open_link" = "Permitir abrir enlace externo";
 "change_wallet_password" = "Cambia la contraseña del wallet";
-"create_new_category" = "Create new tag";
+"create_new_category" = "Crea una nueva etiqueta";
 "report_problem" = "Informar de un problema";
 "open_tg_bot" = "Abrir bot de telegram";
 "link_tg_bot" = "Enlazando con el bot de Telegram";
@@ -268,7 +268,7 @@
 "terms_of_use" = "Términos y condiciones de uso";
 "incorrect_amount" = "La cantidad debe ser mayor o igual a la cantidad mínima";
 "min_amount_loading" = "La cantidad mínima se está cargando...";
-"create_categories_in_settings" = "You can create more tags in Settings.";
+"create_categories_in_settings" = "Puede crear mas etiquetas en Ajustes.";
 "my_addresses" = "Mis direcciones";
 "wrong_requested_amount_title" = "Cantidad solicitada incorrecta";
 "wrong_requested_amount_text" = "La cantidad solicitada no puede ser 0 BEAM. Por favor, introduzca la cantidad correcta.";
@@ -310,7 +310,7 @@
 "date_time" = "Fecha | hora";
 "utxo_history" = "Historial de UTXO";
 "delete_all_text" = "¿Está seguro de que desea eliminar todo (str) de su wallet?";
-"delete_category_text" = "Are you sure you want to delete “(str)” tag?";
+"delete_category_text" = "¿Está usted seguro de querer borrar “(str)” etiqueta?";
 "canot_connect_node" = "No se puede conectar al nodo";
 "buy_beam_value" = "Enviar (valor) a la dirección (nombre) anterior para completar la transacción"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "Escanear código QR del destinatario";
@@ -343,8 +343,8 @@
 "version" = "Versión"; // example Version 3.1
 "as_set" = "como se establece ahora";
 "transaction_deleted" = "Transacción borrada";
-"transaction_comment" = "Transaction comment";
-"not_shared" = "Won’t be shared";
+"transaction_comment" = "Nota de transacción";
+"not_shared" = "No será compartido";
 "language" = "Idioma";
 "optional" = "Opcional";
 "invalid_address_title" = "Dirección erronea";
@@ -354,35 +354,38 @@
 "sent_to_own" = "Enviado a dirección propia";
 "sending_to_own" = "Enviando a dirección propia";
 "default" = "Defecto";
-"my_active" = "My active"; // addresses
-"my_expired" = "My expired"; // addresses
-"general_settings" = "General settings";
-"unavailable" = "Unavailable";
-"in_progress_out" = "In progress\n(outgoing)";
-"in_progress_in" = "In progress\n(incoming)";
-"in_progress_change" = "In progress\n(change)";
-"never_expires" = "Never expires";
-"expires_in" = "Expires in"; // expires in 6 h 30 m
+"my_active" = "Mi activo"; // addresses
+"my_expired" = "Mi caducado"; // addresses
+"general_settings" = "Configuración general";
+"unavailable" = "Indisponible";
+"in_progress_out" = "En progreso (saliente)";
+"in_progress_in" = "En progreso (entrante)";
+"in_progress_change" = "En progreso (cambiar)";
+"never_expires" = "Nunca caduca";
+"expires_in" = "Caduca en"; // expires in 6 h 30 m
 "h" = "h"; // hour
 "m" = "m"; // minute
-"send_qr_secure" = "Show this QR code to the sender or send it over an external secure channel.";
-"share_transaction" = "Share transaction details";
-"auth_face_confirm" = "Confirm your face to authenticate";
-"auth_touch_confirm" = "Confirm your fingerprint to authenticate";
-"auth_bio_failed" = "(Mechanism) has been locked out due to few fail attemp. Enter iPhone passcode to enable (Mechanism)."; // (Mechanism) is Face ID or Touch ID.
-"add_all" = "Add all";
-"my_active_addresses" = "My active addresses";
-"tag" = "Tag";
-"contacts_empty" = "Your contacts list  is empty";
-"addresses_empty" = "Your addresses list  is empty";
-"utxo_empty" = "Your UTXO list is empty";
-"transactions_empty" = "Your transaction list is empty";
-"automatic_restore_title" = "Recommended restore";
-"automatic_restore_text" = "Beam Wallet will download the blockchain snapshot from the cloud.";
-"manual_restore_title" = "Restore with trusted node";
-"manual_restore_text" = "Beam Wallet will will connect to specific node and node will find all your funds in a blockchain.";
-"paste_owner_key" = "Paste this code in Beam Wallet on your desktop to proceed restore from the node.";
-"after_paste_owner_key" = "Once you’ll paste the code, run your node on desktop and click next on mobile app.";
-"enter_trusted_node" = "Enter trusted node address";
-"trusted_node_error" = "Node isn’t connectable. Try connect wallet to different node or use recommended restore.";
-"owner_key" = "Owner key";
+"send_qr_secure" = "Mostrar este código QR al remitente o enviar a través de un canal externo seguro.";
+"share_transaction" = "Compartir detalles de la transacción";
+"auth_face_confirm" = "Confirma tu rostro para autenticar";
+"auth_touch_confirm" = "Confirma tu huella dactilar para autenticar";
+"auth_bio_failed" = "(Mecanismo) ha sido bloqueado debido a algunos intentos fallidos. Introduzca el código de acceso del iPhone para habilitar (Mecanismo)."; // (Mechanism) is Face ID or Touch ID.
+"add_all" = "Añadir todo";
+"my_active_addresses" = "Mis direcciones activas";
+"tag" = "Etiqueta";
+"contacts_empty" = "Tu lista de contactos está vacia";
+"addresses_empty" = "Tu lista de direcciones está vacía";
+"utxo_empty" = "Tu lista de UTXO está vacía";
+"transactions_empty" = "Tu lista de transacciones está vacía";
+"automatic_restore_title" = "Restauración recomendada";
+"automatic_restore_text" = "Beam Wallet descargará la captura de pantalla blockchain de la nube.";
+"manual_restore_title" = "Restaurar con nodo de confianza";
+"manual_restore_text" = "El Wallet de Beam se conectará a un nodo específico y restaurará sus activos a través de la blockchain.";
+"paste_owner_key" = "Pegue este código en el Wallet de Beam en su escritorio para proceder a la restauración desde el nodo.";
+"after_paste_owner_key" = "Una vez que pegue el código, ejecute su nodo en el escritorio y haga clic en siguiente en la aplicación móvil.";
+"enter_trusted_node" = "Introduzca la dirección de nodo de confianza";
+"trusted_node_error" = "El nodo no se puede conectar. Intente conectar el wallet a un nodo diferente o use la restauración recomendada.";
+"owner_key" = "Clave de propietario";
+"new_transaction" = "Transacción entrante";
+"click_to_receive" = "Click para recibir los Beam";
+"album" = "Album";
