--- a/Resources/ru.lproj/Localizable.strings
+++ b/Resources/ru.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 "seed_capture_warning" = "Вы сделали скриншот контрольной фразы! Хранение скриншота на вашем телефоне подвергает риску все ваши средства! Настоятельно рекомендуется удалить скриншот из фотоальбома.";
 "seed_prhase" = "Контрольная фраза";
 "inpur_seed" = "Введите вашу контрольную фразу";
-"confirm_seed" = "Что бы убедиться что вы правильно записали вашу контрольную фразу, пожалуйста введите нужные слова в поля снизу";
+"confirm_seed_text" = "Что бы убедиться что вы правильно записали вашу контрольную фразу, пожалуйста введите нужные слова в поля снизу";
 "display_seed" = "Ваша контрольная фраза является ключом для доступа ко всем вашим средствам. Храните фразу в защищенном месте. В случае потери контрольной фразы, вы не сможете восстановить доступ к вашим средствам.";
 "intro_seed_main" = "Создать новый кошелек и новую контрольную фразу.Если вы потеряете доступ к своему устройству, для восстановления кошелька вам понадобится контрольная фраза.Никогда не сохраняйте контрольную фразу в связке ключей или в программах по управлению паролями, а также в файлах или удаленных папках.";
 "intro_seed_1" = "Не показывайте никому вашу контрольную фразу";
@@ -301,8 +301,8 @@
 "share_qr" = "Переслать QR";
 "requested_amount" = "Запрашиваемая сумма";
 "now" = "До текущего времени";
-"blockchain_height" = "Высота цепочки блоков";
-"block_hash" = "Хэш последнего блока";
+"blockchain_height" = "Высота блока";
+"block_hash" = "Хэш блока";
 "coinbase" = "Награда";
 "regular" = "Обычный";
 "treasury" = "Казна";
@@ -386,3 +386,6 @@
 "enter_trusted_node" = "Введите адрес доверенного узла";
 "trusted_node_error" = "Узел не подключен. Попробуйте подключить кошелек к другому узлу или используйте другой тип восстановления.";
 "owner_key" = "Ключ владельца";
+"new_transaction" = "Incoming transaction";
+"click_to_receive" = "Click to receive Beam";
+"album" = "Album";
