--- a/Resources/sv.lproj/Localizable.strings
+++ b/Resources/sv.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 "seed_capture_warning" = "Du har precis tagit en skärmdump på ditt seed phrase. Behåller du denna bild på din telefon kommer dina tillgångar att vara utsatt för risk. Det är starkt rekommenderat att ta bort denna bild manuellt från ditt bild-galleri.";
 "seed_prhase" = "Seed phrase";
 "inpur_seed" = "Ange ditt seed phrase";
-"confirm_seed" = "För att säkerställa att seed phrase är nerskrivet, vänligen fyll i de specifika orden nedan";
+"confirm_seed_text" = "För att säkerställa att seed phrase är nerskrivet, vänligen fyll i de specifika orden nedan";
 "display_seed" = "Ditt seed phrase tillåter åtkomsten till alla kryptovalutor i din plånbok. Skriv ner seed phrase och spar detta i ett kassaskåp eller i ett låst valv. Om ditt seed phrase försvinner kommer du inte kunna återställa dina pengar.";
 "intro_seed_main" = "Skapa en ny plånbok genom att generera ett seed phrase. Om du blir av med din enhet så behövs ditt seed phrase för att återställa tillgångarna. Ange aldrig ditt seed phrase på en nyckelknippa eller lösenordsmanagerare. Spara aldrig detta på ditt lokala filsystem eller några fjärr-mappar av någon sort.";
 "intro_seed_1" = "Låt ingen annan se din seed phrase";
@@ -144,7 +144,7 @@
 "stay_active_text" = "Stäng inte plånboken, annars kommer transaktionen inte att gå igenom";
 "rate_title" = "\n\n\nDin röst betyder något!";
 "rate_text" = "Vänligen betygsätt din användning av Beam-plånboken";
-"rate_app" = "Rate the app";
+"rate_app" = "Betygsätt appen";
 "feedback" = "Återkoppling";
 "not_now" = "Inte nu";
 "amount_empty" = "Mängd kan ej vara tom";
@@ -161,14 +161,14 @@
 "qr_code" = "QR kod";
 "create_address" = "skapa adress";
 "new_address" = "Ny adress";
-"new_category" = "Create tag";
-"edit_category" = "Edit tag";
-"category_name" = "Tag name";
-"category_exist" = "This tag already exists";
+"new_category" = "Skapa Tag";
+"edit_category" = "Editera tag";
+"category_name" = "Tagga namn";
+"category_exist" = "Denna tag finns redan";
 "edit" = "Ändra";
 "delete" = "Ta bort";
-"no_category_addresses" = "there are no addresses associated with this tag";
-"delete_category" = "Delete tag";
+"no_category_addresses" = "det finns inga adresser som är associerade med denna tag";
+"delete_category" = "Ta bort tag";
 "beams_send" = "Beam skickade";
 "undo" = "Ångra";
 "repeat" = "Repetera";
@@ -176,8 +176,8 @@
 "delete_transaction_title" = "Ta bort transaktion";
 "delete_transaction_text" = "Är du säker på att du vill ta bort denna transaktion från din plånbok?";
 "current_password_error" = "Nuvarande lösenord är felaktigt";
-"categories_empty_title" = "Tags list is empty";
-"categories_empty_text" = "You don’t have any tags\nat the moment. You can create tag in Settings.";
+"categories_empty_title" = "Tag-listan är tom";
+"categories_empty_text" = "Du har för närvarande inga tagar. Du kan skapa tag i Inställningar.";
 "cancel_transaction_text" = "Är du säker på att du vill avbryta denna transaktion?";
 "yes" = "Ja";
 "no" = "Nej";
@@ -197,7 +197,7 @@
 "change_address" = "Byt adress";
 "auto_address" = "Adress (automatiskt genererad)";
 "existing_addresses" = "Existerande adresser";
-"address_search" = "Search by address, tag or name";
+"address_search" = "Sök med adress, tag eller namn";
 "not_found" = "Hittade inget";
 "touch_id_ownerkey_verefication" = "Använd fingeravtryck för att avsluta verifieringen och få tillgång till ägar-nyckeln";
 "send" = "Skicka";
@@ -229,12 +229,12 @@
 "outgoing_address" = "Utgående adresser";
 "your_password" = "Ditt lösenord";
 "node" = "Nod";
-"categories" = "Tags";
+"categories" = "Tagar";
 "ip_port" = "ip:port";
 "ask_password" = "Fråga efter lösenord vid varje skickad transaktion";
 "allow_open_link" = "Tillåt att öppna externa länkar";
 "change_wallet_password" = "Byta plånbokens lösenord";
-"create_new_category" = "Create new tag";
+"create_new_category" = "Skapa ny tag";
 "report_problem" = "Rapportera ett problem";
 "open_tg_bot" = "Öppna telegram bot";
 "link_tg_bot" = "Länka telegram bot";
@@ -268,7 +268,7 @@
 "terms_of_use" = "Användarvillkor";
 "incorrect_amount" = "Mängd måste vara större eller lika med minsta tillåtna mängd";
 "min_amount_loading" = "Minsta möjliga mängd laddar...";
-"create_categories_in_settings" = "You can create more tags in Settings.";
+"create_categories_in_settings" = "Du kan skapa fler tagar under Inställningar.";
 "my_addresses" = "Mina adresser";
 "wrong_requested_amount_title" = "Felaktigt begärd mängd";
 "wrong_requested_amount_text" = "Begärd mängd kan inte var a0 BEAM. Vänligen ange en korrekt mängd.";
@@ -310,7 +310,7 @@
 "date_time" = "Datum | tid";
 "utxo_history" = "UTXO-historik";
 "delete_all_text" = "Är du säker på att du vill ta bort all (str) från din plånbok?";
-"delete_category_text" = "Are you sure you want to delete “(str)” tag?";
+"delete_category_text" = "Är du säker på att du vill ta bort \"(str)\" tag?";
 "canot_connect_node" = "Kan inte ansluta till nod";
 "buy_beam_value" = "Skicka (värde) till ovan (namn) adress för att slutföra transaktionen"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "Scanna mottagarens QR-kod";
@@ -341,48 +341,51 @@
 "copy_details" = "Kopiera detaljer";
 "copy_code" = "Kopiera kod";
 "version" = "Version"; // example Version 3.1
-"as_set" = "as set now";
+"as_set" = "som är satt just nu";
 "transaction_deleted" = "Transaktion borttagen";
-"transaction_comment" = "Transaction comment";
-"not_shared" = "Won’t be shared";
+"transaction_comment" = "Transaktions-kommentar";
+"not_shared" = "Kommer inte att delas";
 "language" = "Språk";
 "optional" = "Valfritt";
 "invalid_address_title" = "Ogiltig adress";
 "invalid_address_text" = "Den ifyllda nod-adressen är ogiltig. Vänligen kontrollera att angiven adress är korrekt";
 "insufficient_funds" = "Otillräckliga medel: du behöver (värde) beams för att slutföra transaktionen";
-"downloading" = "Downloading";
-"sent_to_own" = "Sent to own address";
-"sending_to_own" = "Sending to own address";
-"default" = "Default";
-"my_active" = "My active"; // addresses
-"my_expired" = "My expired"; // addresses
-"general_settings" = "General settings";
-"unavailable" = "Unavailable";
-"in_progress_out" = "In progress\n(outgoing)";
-"in_progress_in" = "In progress\n(incoming)";
-"in_progress_change" = "In progress\n(change)";
-"never_expires" = "Never expires";
-"expires_in" = "Expires in"; // expires in 6 h 30 m
-"h" = "h"; // hour
+"downloading" = "Laddar ner";
+"sent_to_own" = "Skickat till egen adress";
+"sending_to_own" = "Skickat till egen adress";
+"default" = "Standard";
+"my_active" = "Min aktiva"; // addresses
+"my_expired" = "Mina utgångna"; // addresses
+"general_settings" = "Generella inställningar";
+"unavailable" = "Otillgängligt";
+"in_progress_out" = "Pågår(utgående)";
+"in_progress_in" = "Pågår(inkommande)";
+"in_progress_change" = "Pågår(växel)";
+"never_expires" = "Utgår aldrig";
+"expires_in" = "Utgår om"; // expires in 6 h 30 m
+"h" = "t"; // hour
 "m" = "m"; // minute
-"send_qr_secure" = "Show this QR code to the sender or send it over an external secure channel.";
-"share_transaction" = "Share transaction details";
-"auth_face_confirm" = "Confirm your face to authenticate";
-"auth_touch_confirm" = "Confirm your fingerprint to authenticate";
-"auth_bio_failed" = "(Mechanism) has been locked out due to few fail attemp. Enter iPhone passcode to enable (Mechanism)."; // (Mechanism) is Face ID or Touch ID.
-"add_all" = "Add all";
-"my_active_addresses" = "My active addresses";
+"send_qr_secure" = "Visa denna QR-kod till sändaren eller skicka den över en extern säker kanal.";
+"share_transaction" = "Dela transaktions-detaljer";
+"auth_face_confirm" = "Verifiera ditt ansikte för att autentisera";
+"auth_touch_confirm" = "Verifiera ditt fingeravtryck för att autentisera";
+"auth_bio_failed" = "(Mekanism) har blivit utlåst på grund av ett antal felaktiga försök. Mata in iPhone-lösenordet för att aktivera (Mekanism)."; // (Mechanism) is Face ID or Touch ID.
+"add_all" = "Lägg till alla";
+"my_active_addresses" = "Mina aktiva adresser";
 "tag" = "Tag";
-"contacts_empty" = "Your contacts list  is empty";
-"addresses_empty" = "Your addresses list  is empty";
-"utxo_empty" = "Your UTXO list is empty";
-"transactions_empty" = "Your transaction list is empty";
-"automatic_restore_title" = "Recommended restore";
-"automatic_restore_text" = "Beam Wallet will download the blockchain snapshot from the cloud.";
-"manual_restore_title" = "Restore with trusted node";
-"manual_restore_text" = "Beam Wallet will will connect to specific node and node will find all your funds in a blockchain.";
-"paste_owner_key" = "Paste this code in Beam Wallet on your desktop to proceed restore from the node.";
-"after_paste_owner_key" = "Once you’ll paste the code, run your node on desktop and click next on mobile app.";
-"enter_trusted_node" = "Enter trusted node address";
-"trusted_node_error" = "Node isn’t connectable. Try connect wallet to different node or use recommended restore.";
-"owner_key" = "Owner key";
+"contacts_empty" = "Din kontakt-lista är tom";
+"addresses_empty" = "Din adress-lista är tom";
+"utxo_empty" = "Din UTXO-lista är tom";
+"transactions_empty" = "Din transaktions-lista är tom";
+"automatic_restore_title" = "Rekommenderad återställning";
+"automatic_restore_text" = "Beam-plånboken kommer att ladda ner block-kedjans ögonblicksbild från molnet.";
+"manual_restore_title" = "Återställ med trovärdig nod";
+"manual_restore_text" = "Beam-plånboken kommer att ansluta till en specifik nod och du kommer att återställa dina tillgångar via block-kedjan.";
+"paste_owner_key" = "Klistra in denna kod i Beam-plånboken på din dator för att fortsätta återställningen från noden.";
+"after_paste_owner_key" = "När du har klistrat in koden, kör din nod på datorn och klicka \"nästa\" på din mobila app.";
+"enter_trusted_node" = "Mata in pålitlig nod-adress";
+"trusted_node_error" = "Nod är ej kontaktbar. Försök att ansluta plånboken mot en annan nod eller använd rekommenderad återställning.";
+"owner_key" = "Ägar-nyckel";
+"new_transaction" = "Incoming transaction";
+"click_to_receive" = "Click to receive Beam";
+"album" = "Album";
