--- a/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Resources/zh-Hans.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 "seed_capture_warning" = "您刚刚截图了您的助记词。将截图图片保存在手机上会导致资金安全风险。强烈建议从手机照片库中永久删除助记词截图（需在”最近删除“文件夹中再次删除）。";
 "seed_prhase" = "种子短语";
 "inpur_seed" = "输入您的种子短语";
-"confirm_seed" = "为了确保种子短语被正确地写下来，请根据下面数字提示输入相应的种子短语。";
+"confirm_seed_text" = "为验证助记词已被您被正确誊写并保存，请根据下面数字提示输入相应的助记词";
 "display_seed" = "种子短语是进入你钱包的钥匙。打印或写下这个短语，妥善保存。如果您丢失种子短语，将失去该钱包所有的钱。";
 "intro_seed_main" = "通过生成助记词来创建新钱包。如果您不幸丢失了本设备，可以通过助记词来恢复钱包。永远不要使用“钥匙串”功能或密码管理器功能来存储助记词。永远不要用电子系统或云盘保存助记词。";
 "intro_seed_1" = "不要让任何人看到您的种子短语";
@@ -118,7 +118,7 @@
 "delete_address" = "删除地址";
 "delete_address_transaction" = "删除地址及与其关联的交易记录";
 "delete_address_only" = "仅删除地址";
-"category" = "Tag";
+"category" = "标签";
 "in_24_hours" = "24小时";
 "never" = "永不";
 "address_expires" = "地址失效";
@@ -144,7 +144,7 @@
 "stay_active_text" = "请不要关闭钱包，否则交易无法完成";
 "rate_title" = "你的意见很重要";
 "rate_text" = "请评价您对Beam钱包的使用体验";
-"rate_app" = "Rate the app";
+"rate_app" = "评价App";
 "feedback" = "反馈";
 "not_now" = "暂不";
 "amount_empty" = "数量不能为空";
@@ -161,14 +161,14 @@
 "qr_code" = "二维码";
 "create_address" = "创建地址";
 "new_address" = "新地址";
-"new_category" = "Create tag";
-"edit_category" = "Edit tag";
-"category_name" = "Tag name";
-"category_exist" = "This tag already exists";
+"new_category" = "创建标签";
+"edit_category" = "修改标签";
+"category_name" = "标签名称";
+"category_exist" = "此标签已存在";
 "edit" = "编辑";
 "delete" = "删除";
-"no_category_addresses" = "there are no addresses associated with this tag";
-"delete_category" = "Delete tag";
+"no_category_addresses" = "该标签无关联地址";
+"delete_category" = "删除标签";
 "beams_send" = "已付Beam";
 "undo" = "撤销";
 "repeat" = "重复";
@@ -176,8 +176,8 @@
 "delete_transaction_title" = "删除交易";
 "delete_transaction_text" = "确认从钱包中删除该交易吗？";
 "current_password_error" = "当前密码不正确";
-"categories_empty_title" = "Tags list is empty";
-"categories_empty_text" = "You don’t have any tags\nat the moment. You can create tag in Settings.";
+"categories_empty_title" = "标签列表为空";
+"categories_empty_text" = "您当前没有创建任何标签\n您可以在设置中创建标签";
 "cancel_transaction_text" = "确认取消交易么？";
 "yes" = "是";
 "no" = "否";
@@ -197,7 +197,7 @@
 "change_address" = "找零地址";
 "auto_address" = "地址（自动生成）";
 "existing_addresses" = "已存在地址";
-"address_search" = "Search by address, tag or name";
+"address_search" = "按地址、标签、或名称搜索";
 "not_found" = "无结果";
 "touch_id_ownerkey_verefication" = "使用指纹完成验证和获取所有者密钥";
 "send" = "付款";
@@ -229,12 +229,12 @@
 "outgoing_address" = "出账地址";
 "your_password" = "你的密码";
 "node" = "节点";
-"categories" = "Tags";
+"categories" = "标签";
 "ip_port" = "IP地址:端口";
 "ask_password" = "每次付款时均要求输入密码";
 "allow_open_link" = "允许打开外部链接";
 "change_wallet_password" = "修改钱包密码";
-"create_new_category" = "Create new tag";
+"create_new_category" = "创建标签";
 "report_problem" = "报告问题";
 "open_tg_bot" = "打开Telegram机器人";
 "link_tg_bot" = "正在关联Telegram机器人";
@@ -268,7 +268,7 @@
 "terms_of_use" = "使用条款及细则";
 "incorrect_amount" = "数量必须大于或等于最小数量";
 "min_amount_loading" = "正在加载最小数量";
-"create_categories_in_settings" = "You can create more tags in Settings.";
+"create_categories_in_settings" = "您可以在设置中创建更多标签";
 "my_addresses" = "我的地址";
 "wrong_requested_amount_title" = "错误的请求数量";
 "wrong_requested_amount_text" = "请求数量不能是0个Beam！请输入正确的数量";
@@ -310,7 +310,7 @@
 "date_time" = "日期 | 时间";
 "utxo_history" = "UTXO历史记录";
 "delete_all_text" = "确认从钱包中删除所有(str)吗？";
-"delete_category_text" = "Are you sure you want to delete “(str)” tag?";
+"delete_category_text" = "确定要删除 “(str)\" 标签吗?";
 "canot_connect_node" = "无法连接到节点";
 "buy_beam_value" = "付款 (value) to (name) 地址以完成交易"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "扫描收款人二维码";
@@ -343,8 +343,8 @@
 "version" = "版本"; // example Version 3.1
 "as_set" = "当前设置";
 "transaction_deleted" = "交易已被删除";
-"transaction_comment" = "Transaction comment";
-"not_shared" = "Won’t be shared";
+"transaction_comment" = "交易备注";
+"not_shared" = "不会被共享";
 "language" = "语言";
 "optional" = "可选";
 "invalid_address_title" = "无效地址";
@@ -366,23 +366,26 @@
 "h" = "小时"; // hour
 "m" = "分钟"; // minute
 "send_qr_secure" = "请向付款方出示该二维码、或通过外部安全媒介将其发送给付款方";
-"share_transaction" = "Share transaction details";
-"auth_face_confirm" = "Confirm your face to authenticate";
-"auth_touch_confirm" = "Confirm your fingerprint to authenticate";
-"auth_bio_failed" = "(Mechanism) has been locked out due to few fail attemp. Enter iPhone passcode to enable (Mechanism)."; // (Mechanism) is Face ID or Touch ID.
-"add_all" = "Add all";
-"my_active_addresses" = "My active addresses";
-"tag" = "Tag";
-"contacts_empty" = "Your contacts list  is empty";
-"addresses_empty" = "Your addresses list  is empty";
-"utxo_empty" = "Your UTXO list is empty";
-"transactions_empty" = "Your transaction list is empty";
-"automatic_restore_title" = "Recommended restore";
-"automatic_restore_text" = "Beam Wallet will download the blockchain snapshot from the cloud.";
-"manual_restore_title" = "Restore with trusted node";
-"manual_restore_text" = "Beam Wallet will will connect to specific node and node will find all your funds in a blockchain.";
-"paste_owner_key" = "Paste this code in Beam Wallet on your desktop to proceed restore from the node.";
-"after_paste_owner_key" = "Once you’ll paste the code, run your node on desktop and click next on mobile app.";
-"enter_trusted_node" = "Enter trusted node address";
-"trusted_node_error" = "Node isn’t connectable. Try connect wallet to different node or use recommended restore.";
-"owner_key" = "Owner key";
+"share_transaction" = "分享交易详情";
+"auth_face_confirm" = "请验证面容认证";
+"auth_touch_confirm" = "请验证指纹认证";
+"auth_bio_failed" = "(Mechanism)已因多次失败尝试被锁定\n请输入iPhone密码以启用(Mechanism)"; // (Mechanism) is Face ID or Touch ID.
+"add_all" = "新增所有";
+"my_active_addresses" = "有效地址";
+"tag" = "标签";
+"contacts_empty" = "联系人列表是空的";
+"addresses_empty" = "地址列表是空的";
+"utxo_empty" = "UTXO列表是空的";
+"transactions_empty" = "交易列表是空的";
+"automatic_restore_title" = "推荐恢复";
+"automatic_restore_text" = "Beam钱包将会从云端下载区块链快照";
+"manual_restore_title" = "通过信任节点恢复";
+"manual_restore_text" = "Beam钱包将连接到指定节点，指定节点将会从区块链中读取您的所有资金";
+"paste_owner_key" = "将该代码粘贴入桌面上的Beam钱包中，继续从节点恢复";
+"after_paste_owner_key" = "粘贴代码后，运行电脑上的节点、并在移动App中点击下一步";
+"enter_trusted_node" = "请输入信任的节点地址";
+"trusted_node_error" = "无法连接到节点。请尝试连接钱包到新节点或者使用推荐恢复";
+"owner_key" = "所有者密钥";
+"new_transaction" = "收到新入账交易";
+"click_to_receive" = "点击以接收Beam";
+"album" = "Album";
